--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -894,3 +894,38 @@ Furthermore, FlexiCodec excels in emotion recognition, non-speech sound detectio
 Even at a very low average frame rate of 6.25Hz, FlexiCodec maintains strong performance, demonstrating its efficiency and effectiveness in preserving crucial semantic content.
 
 These results validate that FlexiCodec's tokens are not only suitable for high-quality audio reconstruction but also serve as a powerful and compact representation for general audio understanding.
+
+## 12·Ablation Study
+
+\label{sec:appendix_ablation_study}
+
+<a id="tab:extended_ablation">\text{Extended ablation study of FlexiCodec.}
+
+We underline the results that are significantly degraded from the baseline.</a>
+
+Table~[tab:extended_ablation](#tab:extended_ablation) summarizes our further ablation study of FlexiCodec, examining the impact of removing or modifying key components including the Frame Merging and Unmerging modules, quantization schemes, and semantic feature inputs.
+
+Each ablated model is retrained following the recipe of FlexiCodec and are tested on 6.25Hz average frame rates.
+
+Key observations are summarized below.
+
+$\bullet$ **Transformers in Frame Merging and Unmerging Modules are critical for maintaining high acoustic quality.**\quad
+Removing the Transformer refinement from either the frame merging or unmerging module leads to noticeable decreases in acoustic quality metrics (PESQ, UTMOS) and speaker similarity (SIM), as evidenced by the underlined values in rows B1 and C1.
+
+However, the impact on the semantic test scores, especially RVQ-1 WER, is very small.
+
+These results highlight that the Transformer's local attention especially refines acoustic features after compression and expansion, **reducing artifacts and unnatural transitions caused by naive averaging and frame repetition.**
+
+$\bullet$ **Using an SSL feature does not yield a good performance in FlexiCodec, compared to ASR features.**
+
+As shown in row E1, adopting the w2v-bert-2[^Barrault2023Seamless]
+
+SSL feature (which worked in DualCodec) in our system shows degraded semantic and acoustic results, except that its SIM score improves.
+
+We have examined the frame similarity pattern of this feature, and found that its adjacent frames tend to have low similarities, as it required to set a very low threshold $\tau\approx 0.5$ to reduce to a 6.25Hz average frame rate.
+
+We hypothesize that the SSL feature contains leaked acoustic information like timbre, so the frame merging module may not effectively merge semantically consistent tokens together.
+
+As a comparison, we also tried using Whisper-medium ASR (row E2) and layer-averaged Sensevoice-Small ASR (row E3).
+
+Both perform better than SSL feature, suggesting that the semantic-rich ASR features are more suitable for dynamic-frame-rate codecs like FlexiCodec.
