--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -929,3 +929,108 @@ We hypothesize that the SSL feature contains leaked acoustic information like ti
 As a comparison, we also tried using Whisper-medium ASR (row E2) and layer-averaged Sensevoice-Small ASR (row E3).
 
 Both perform better than SSL feature, suggesting that the semantic-rich ASR features are more suitable for dynamic-frame-rate codecs like FlexiCodec.
+
+## 13·More Information of Baseline Codecs
+
+\label{sec:appendix_more_information_baseline_codec}
+
+### Retrained baselines
+
+\label{sec:appendix_more_information_retrained_baselines}
+$\bullet$ **DAC:**
+
+It is a high-fidelity neural audio codec with open-source recipes.
+
+It proposed two key improvements over Encodec.
+
+First, it
+addressed the codebook collapse problem by reducing the dimension of the latent vector to a small value for quantization.
+
+Second, It replaced the ReLU activation function with a periodic activation function, offering benefits for reconstructing periodic signals such as speech and music.
+
+It is trained on more than 10k hours of data including speech, audio and music.
+
+$\bullet$ **DualCodec:**
+
+It is a  low-frame-rate neural audio codec specifically designed to enhance speech generation tasks like TTS.
+
+It introduced a dual-stream encoding architecture that processes semantic and acoustic information in parallel.
+
+One stream uses a pre-trained SSL model w2v-bert-2[^Barrault2023Seamless] to extract rich semantic features.
+
+The second stream encodes acoustic information directly from the waveform.
+
+This dual approach ensures that the primary codec tokens are semantically meaningful and allows low frame rates (12.5Hz or 25Hz).
+
+Its waveform encoding stream utilizes the architecture of DAC codec.
+
+To retrain these two systems, we use their public repositories, and modify their codec encoder strides to achieve lower frame rates compared to their original versions.
+
+The configurations are shown in Table~[tab:baseline_framerates](#tab:baseline_framerates).
+
+Their decoders mirror their encoders.
+
+We have also modified their codebook sizes to align with FlexiCodec.
+
+Specifically, we modify to 32768 RVQ-1 codebook size for DualCodec instead of 16384, and use 4096 codebook size for DAC and DualCodec remaining RVQ layers.
+
+To retrain fixed-frame-rate FlexiCodec baselines, we also follow Table~[tab:baseline_framerates](#tab:baseline_framerates) to modify their strides to achieve 8.3Hz and 6.25Hz frame rate, respectively.
+
+<a id="tab:baseline_framerates">The CNN encoder strides settings corresponding to each frame rate configuration on retrained codec systems.</a>
+
+### Other baselines
+
+$\bullet$ **Encodec**[^D{\'e}fossez2022High]: A high-fidelity neural audio codec.
+
+It introduced LSTM bottleneck layers and multi-scale STFT discriminator on top of SoundStream[^Zeghidour2021Soundstream].
+
+$\bullet$ **SpeechTokenizer**[^Zhang2023Speechtokenizer]: A neural audio codec designed for speech language models.
+
+It introduced  semantic distillation, where the first layer of its RVQ is trained to match semantic-rich representations from a pre-trained SSL model HuBERT.
+
+$\bullet$ **Mimi**[^D{\'e}fossez2024Moshi]: A neural audio codec designed for real-time applications.
+
+It compresses 24kHz speech into a 12.5 Hz token representation with a bitrate of 1.1 kbps.
+
+It features a split RVQ system, where one quantizer captures semantic information and the remaining layers encode acoustic details.
+
+It integrates Transformer layers in its bottleneck and distilling semantic knowledge from an SSL model.
+
+$\bullet$ **WavTokenizer**[^Ji2024Wavtokenizer]: A codec with single-layer neural quantizer operating with a large FSQ codebook, optimized for universal speech processing and compression.
+
+It is noted for its efficiency and ease of integration into generative frameworks like GPT-4o.
+
+$\bullet$ **TS3Codec**[^Wu2024Ts3-Codec]: A transformer-based neural audio codec with FSQ bottleneck, designed for minimal bitrate speech encoding.
+
+We acquire its inference audios from its audios.
+
+Its two model offerings, X2 and X4, have been described in its paper.
+
+$\bullet$ **SNAC**[^Siuzdak2024Snac]:
+A codec that extends the standard Residual Vector Quantization (RVQ) framework by implementing quantizers operating at different temporal resolutions [^Siuzdak2024Snac].
+
+Its coarse tokens are sampled at lower frequencies.
+
+Each RVQ layer operates at 12Hz, 23Hz, 47Hz, respetively.
+
+$\bullet$ **XYTokenizer**[^Gong2025XY-Tokenizer]:
+A dual-channel 12.5Hz neural speech codec with parallel semantic and acoustic processing streams, operating at low bitrates.
+
+The semantic encoder is initialized with frozen Whisper-small weights and includes adapter modules, while the acoustic encoder is trainable from scratch.
+
+$\bullet$ **TaDiCodec**[^Wang2025TaDiCodec]:
+A speech tokenizer with 6.25Hz tokens and text-assisted decoding, designed for text-to-speech synthesis.
+
+TaDiCodec has a transformer-based encoder and a diffusion-based decoder.
+
+Its diffusion decoder utilizes text transcriptions to enhance semantic; reference speech to enhance timbre.
+
+During inference, we use the ground truth audio as reference speech, and use HuBERT-Large-LS960-ft[^Hsu2021Hubert] to obtain the text.
+
+We calculate its bitrate as speech token bitrate + text token theoretical bitrate.
+
+We infer each baseline system from its official checkpoint.
+
+Each input audio has been resampled to match the codec's input frame rate.
+
+We also note that Mimi, XY-Tokenizer and SNAC do not support decoding solely from RVQ-1 tokens, so their RVQ-1 semantic tests are left blank in Table~[tab:tokenizer-rec-res](#tab:tokenizer-rec-res).
