--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -1074,3 +1074,20 @@ The parameter breakdown of FlexiCodec is shown in Table~[tab:flexicodec_params](
 Additionally, the discriminators have 54M parameters in total, but are discarded during inference.
 
 <a id="tab:flexicodec_params">Number of parameters breakdown in FlexiCodec</a>
+
+## 15·ASR Probing Task Details
+
+Following XARES[^Zhang2025X-Ares] benchmark, the ASR probing task adds an MLP adaptor before a frozen Qwen2.5-0.5B model.
+
+The LM sequence is a concatenation of the adaptor-transformed speech feature, a separator token, and
+the ground truth text transcription.
+
+The model is trained using 1 Nvidia V100 GPU for 10 epochs, a batch size of 16, a cosine decay learning rate of initially $10^{-3}$, and decays to $10^{-4}$ over 10 epochs.
+
+During inference, a greedy auto-regressive sampling is used to predict the text tokens given the encoded speech features.
+
+The feature from FlexiCodec is obtained by using the FSQ continuous features of RVQ-1 tokens.
+
+Each frame is repeated by its "length'' times to become 12.5Hz sequence.
+
+This is to provide the frame duration information to the ASR, and because XARES only accepts fixed-frame-rate token sequence.
