--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -1125,3 +1125,9 @@ We also plan to investigate the integration of FlexiCodec within unified multi-m
 Most current audio LLMs use different features for understanding and generation.
 
 We will investigate using FlexiCodec tokens for joint semantic understanding and acoustic generation.
+
+## 17·Declaration of the Use of LLMs
+
+During the preparation of this manuscript, we utilized large language models (LLMs) to assist with improving the grammar and readability of the text.
+
+The LLMs were used solely as a writing and editing tool and did not contribute to the generation of any original ideas, methods, or conclusions presented in this paper.
