--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -1146,3 +1146,73 @@ The instructions for our TTS subjective evaluation are shown in Table~[tab:human
 \bibliographystyle{iclr2026_conference}
 
 \end{document}
+
+## References
+
+[^Zeghidour2021Soundstream]: Soundstream: An End-to-End Neural Audio Codec. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
+[^D{\'e}fossez2022High]: High Fidelity Neural Audio Compression. arXiv:2210.13438.
+[^Wang2023Neural]: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. arXiv:2301.02111.
+[^Li2024Investigating]: Investigating Neural Audio Codecs for Speech Language Model-Based Speech Generation. 2024 IEEE Spoken Language Technology Workshop (SLT) 2024.
+[^Wang2024Maskgct]: Maskgct: Zero-Shot Text-to-Speech With Masked Generative Codec Transformer. arXiv:2409.00750.
+[^Du2024CosyVoice]: CosyVoice: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens. arXiv:2407.05407.
+[^Wang2025Spark-Tts]: Spark-Tts: An Efficient LLM-Based Text-to-Speech Model With Single-Stream Decoupled Speech Tokens. arXiv:2503.01710.
+[^Guo2024FireRedTTS]: FireRedTTS: A Foundation Text-to-Speech Framework for Industry-Level Generative Speech Applications. arXiv:2409.03283.
+[^D{\'e}fossez2024Moshi]: Moshi: A Speech-Text Foundation Model for Real-Time Dialogue. arXiv:2410.00037.
+[^Zeng2024GLM-4-Voice]: GLM-4-Voice: Towards Intelligent and Human-Like End-to-End Spoken Chatbot. arXiv:2412.02612.
+[^Ding2025Kimi-Audio]: Kimi-Audio Technical Report. arXiv:2504.18425.
+[^Kumar2024High-Fidelity]: High-Fidelity Audio Compression With Improved Rvqgan. Advances in Neural Information Processing Systems 2024.
+[^Zhang2023Speechtokenizer]: Speechtokenizer: Unified Speech Tokenizer for Speech Large Language Models. arXiv:2308.16692.
+[^Wang2024Why]: Why Do Speech Language Models Fail to Generate Semantically Coherent Outputs? A Modality Evolving Perspective. arXiv:2412.17048.
+[^Li2025DualCodec]: DualCodec: A Low-Frame-Rate, Semantically-Enhanced Neural Audio Codec for Speech Generation. Proceedings of Interspeech 2025 2025.
+[^Chen2022Wavlm]: Wavlm: Large-Scale Self-Supervised Pre-Training for Full Stack Speech Processing. IEEE Journal of Selected Topics in Signal Processing 2022.
+[^Barrault2023Seamless]: Seamless: Multilingual Expressive and Streaming Speech Translation. arXiv:2312.05187.
+[^Ji2024Wavtokenizer]: Wavtokenizer: An Efficient Acoustic Discrete Codec Tokenizer for Audio Language Modeling. arXiv:2408.16532.
+[^Wu2024Ts3-Codec]: Ts3-Codec: Transformer-Based Simple Streaming Single Codec. arXiv:2411.18803.
+[^Liu2024Semanticodec]: Semanticodec: An Ultra Low Bitrate Semantic Audio Codec for General Sound. IEEE Journal of Selected Topics in Signal Processing 2024.
+[^Parker2024Scaling]: Scaling Transformers for Low-Bitrate High-Quality Speech Coding. arXiv:2411.19842.
+[^Mentzer2023Finite]: Finite Scalar Quantization: Vq-Vae Made Simple. arXiv:2309.15505.
+[^Yang2025ALMTokenizer]: ALMTokenizer: A Low-Bitrate and Semantic-Rich Audio Codec Tokenizer for Audio Language Modeling. arXiv:2504.10344.
+[^Gong2025XY-Tokenizer]: XY-Tokenizer: Mitigating the Semantic-Acoustic Conflict in Low-Bitrate Speech Codecs. arXiv:2506.23325.
+[^Wang2025TaDiCodec]: TaDiCodec: Text-Aware Diffusion Speech Tokenizer for Speech Language Modeling. arXiv:2508.16790.
+[^Tseng2025Taste]: TASTE: Text-Aligned Speech Tokenization and Embedding for Spoken Language Modeling. arXiv:2504.07053.
+[^Bolya2022Token]: Token Merging: Your Vit but Faster. arXiv:2210.09461.
+[^Zhang2025DynTok]: DynTok: Dynamic Compression of Visual Tokens for Efficient and Effective Video Understanding. arXiv:2506.03990.
+[^Radford2021Learning]: Learning Transferable Visual Models From Natural Language Supervision. International Conference on Machine Learning 2021.
+[^Cho2024Sd-Hubert]: Sd-Hubert: Sentence-Level Self-Distillation Induces Syllabic Organization in Hubert. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Hsu2021Hubert]: Hubert: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
+[^Baade2024Syllablelm]: Syllablelm: Learning Coarse Semantic Units for Speech Language Models. arXiv:2410.04029.
+[^Dieleman2021Variable-Rate]: Variable-Rate Discrete Representation Learning. arXiv:2103.06089.
+[^Siuzdak2024Snac]: Snac: Multi-Scale Neural Audio Codec. arXiv:2410.14411.
+[^Wang2025CodecSlime]: CodecSlime: Temporal Redundancy Compression of Neural Speech Codec via Dynamic Frame Rate. arXiv:2506.21074.
+[^Zhang2025Unlocking]: Unlocking Temporal Flexibility: Neural Speech Codec With Variable Frame Rate. arXiv:2505.16845.
+[^Zheng2025Say]: Say More With Less: Variable-Frame-Rate Speech Tokenization via Adaptive Clustering and Implicit Duration Coding. arXiv:2509.04685.
+[^Borsos2023Audiolm]: Audiolm: A Language Modeling Approach to Audio Generation. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2023.
+[^Zhang2025Vevo]: Vevo: Controllable Zero-Shot Voice Imitation With Self-Supervised Disentanglement. arXiv:2502.07243.
+[^Betker2023Better]: Better Speech Synthesis Through Scaling. arXiv:2305.07243.
+[^Du2024Cosyvoice]: Cosyvoice 2: Scalable Streaming Speech Synthesis With Large Language Models. arXiv:2412.10117.
+[^Deng2025Indextts]: Indextts: An Industrial-Level Controllable and Efficient Zero-Shot Text-to-Speech System. arXiv:2502.05512.
+[^He2016Deep]: Deep Residual Learning for Image Recognition. Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition 2016.
+[^An2024Funaudiollm]: Funaudiollm: Voice Understanding and Generation Foundation Models for Natural Interaction Between Humans and LLMS. arXiv:2407.04051.
+[^Li2023Blip-2]: Blip-2: Bootstrapping Language-Image Pre-Training With Frozen Image Encoders and Large Language Models. International Conference on Machine Learning 2023.
+[^Liu2022Convnet]: A Convnet for the 2020s. Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition 2022.
+[^Kong2020Hifi-Gan]: Hifi-Gan: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Advances in Neural Information Processing Systems 2020.
+[^Kahn2020Libri-Light]: Libri-Light: A Benchmark for Asr With Limited or No Supervision. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Loshchilov2017Decoupled]: Decoupled Weight Decay Regularization. arXiv:1711.05101.
+[^Panayotov2015Librispeech]: Librispeech: An Asr Corpus Based on Public Domain Audio Books. 2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
+[^Rix2001Perceptual]: Perceptual Evaluation of Speech Quality (PESQ)-a New Method for Speech Quality Assessment of Telephone Networks and Codecs. Icassp 2001.
+[^Kubichek1993Mel-Cepstral]: Mel-Cepstral Distance Measure for Objective Speech Quality Assessment. Ieee Pacrim 1993.
+[^Saeki2022Utmos]: Utmos: Utokyo-Sarulab System for Voicemos Challenge 2022. arXiv:2204.02152.
+[^Zhang2025X-Ares]: X-Ares: A Comprehensive Framework for Assessing Audio Encoder Performance. Interspeech 2025 2025.
+[^Yang2025Qwen2.5]: Qwen2.5 Technical Report. 
+[^Garofolo1993Timit]: TIMIT Acoustic-Phonetic Continuous Speech Corpus. (No Title) 1993.
+[^Borsos2023Soundstorm]: Soundstorm: Efficient Parallel Audio Generation. arXiv:2305.09636.
+[^Le2024Voicebox]: Voicebox: Text-Guided Multilingual Universal Speech Generation at Scale. Advances in Neural Information Processing Systems 2024.
+[^Lipman2022Flow]: Flow Matching for Generative Modeling. arXiv:2210.02747.
+[^Siuzdak2023Vocos]: Vocos: Closing the Gap Between Time-Domain and Fourier-Based Neural Vocoders for High-Quality Audio Synthesis. arXiv:2306.00814.
+[^Li2025Overview]: Overview of the Amphion Toolkit (V0. 2). arXiv:2501.15442.
+[^Zhang2023Amphion]: Amphion: An Open-Source Audio, Music and Speech Generation Toolkit. arXiv:2312.09911.
+[^Kang2024Libriheavy]: Libriheavy: A 50,000 Hours ASR Corpus With Punctuation Casing and Context. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Eskimez2024E2]: E2 Tts: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS. 2024 IEEE Spoken Language Technology Workshop (SLT) 2024.
+[^Meister2023Librispeech-Pc]: Librispeech-Pc: Benchmark for Evaluation of Punctuation and Capitalization Capabilities of End-to-End Asr Models. 2023 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU) 2023.
+[^Radford2023Robust]: Robust Speech Recognition via Large-Scale Weak Supervision. International Conference on Machine Learning 2023.
+[^Dinkel2024Scaling]: Scaling Up Masked Audio Encoder Learning for General Audio Classification. arXiv:2406.06992.
