--- a/Models/FlowMatching/2025.10.03_Flamed-TTS.md
+++ b/Models/FlowMatching/2025.10.03_Flamed-TTS.md
@@ -382,3 +382,121 @@ $$
 $$
 
 where $\space \mathbf{\tilde{x}}_1 = \mathbf{x}_t + (1-t) \cdot \mathbf{v}_\theta(\mathbf{x}_t,\mathbf{s},t)$.
+
+## 4·Experiments
+
+### Experimental Setup
+
+**Dataset**.
+
+We employ the *LibriTTS* dataset [^Zen2019LibriTTS] for training, which comprises multi-speaker English audio recordings.
+
+For evaluation, we use the *LibriSpeech test-clean* dataset [^Panayotov2015Librispeech] as a standard benchmark.
+
+**Evaluation Metrics**.
+
+We evaluate model performance across multiple dimensions, employing not only conventional metrics such as speech quality (UTMOS), speaker similarity (SIM-O and SIM-R), content accuracy (WER), prosodic features, generation efficiency, but also proposing a range of metrics to assess temporal diversity.
+
+Prosodic features, including pitch and energy, are analyzed for accuracy and error trends.
+
+To assess generation efficiency, we report the Number of Function Evaluations (NFE) and Real-Time Factor (RTF).
+
+Temporal diversity is evaluated using Speech Rate, Mean Phoneme Duration (MPhD), Number of Pauses (\#Pauses), and Mean Pause Duration (MPaD).
+
+Additional evaluation details are provided in Appendix Supplementary Material.
+
+**Baselines**.
+
+We compare our method with existing zero-shot TTS systems.
+
+A detailed overview of baseline models is presented in Supplementary Material.
+
+### Main Results
+
+<a id="tab:overall-results">Performance evaluation on the *LibriSpeech test-clean* across different audio prompt lengths. **Bold** indicates the best result, and \underline{underline} indicates the second-best result. ($\uparrow$) indicates that higher values are better, while ($\downarrow$) indicates that lower values are better. $[\varheartsuit]$ means reproduced results. $[\vardiamondsuit]$ and $[\spadesuit]$ mean results inferred from official and ufficial checkpoints, respectively.
+
+Abbreviation: VB (VoxBox), LT (LibriTTS), GS (GigaSpeech).</a>
+
+<a id="tab:size-rtf-results">Comparison of model size and latency for a 3-second audio prompt.
+
+The **\#Params** column shows the total parameters needed for end-to-end synthesis, with the first number indicating the parameters of the zero-shot model (trainable) and the second number representing the parameters of the neural codec or vocoder component (frozen).</a>
+
+<a id="tab:temp-results">Comparison of temporal diversity across models using a 5-second audio prompt.
+
+We report both the mean and standard deviation of Speech Rate, MPhD, \#Pauses, and MPaD to reflect variations in the temporal domain.
+
+All models were trained on the same dataset—*LibriTTS* (500 hours).</a>
+
+**Overall Results**.
+
+Table [tab:overall-results](#tab:overall-results) compares *Flamed-TTS* with baseline models under 1-, 3-, and 5-second prompt conditions. *Flamed-TTS* consistently outperforms all baselines across key metrics, including WER, prosody, and energy measures ($\mathbf{F0}_\mathbf{ACC}, \mathbf{EN}_\mathbf{ACC}, \mathbf{F0}_\mathbf{RMSE}, \mathbf{EN}_\mathbf{RMSE}$), achieving a WER as low as 4\% despite using 18–200× less training data than models like VoiceCraft and SparkTTS, which show 2.5–4.75× higher (worse) WERs.
+
+These results emphasize the effectiveness of phoneme-to-speech alignment mechanisms (e.g., duration predictors) in improving zero-shot TTS performance, as seen in models such as NaturalSpeech 2, OZSpeech, and *Flamed-TTS*.
+
+In terms of naturalness, *Flamed-TTS* ranks second in UTMOS at longer prompt lengths, and it also achieves strong speaker similarity, ranking second in SIM-R and maintaining high SIM-O scores.
+
+Overall, these findings support our design choice of removing the attention mechanism from the *Denoiser*, demonstrating that attention is not essential for achieving intelligibility, naturalness, and speaker consistency in high-fidelity zero-shot TTS.
+
+<a id="tab:nfe-effect">Performance evaluation on the *LibriSpeech test-clean* across different NFE using 5-second audio prompts.
+
+The noise scaling factor $\tau$ is set to 0.3 by default.</a>
+
+**Latency Comparison**.
+
+Table [tab:size-rtf-results](#tab:size-rtf-results) compares the model sizes and inference latencies of *Flamed-TTS* against previous baselines. *Flamed-TTS* is the most lightweight among all evaluated models, with a parameter count equal to 29\% the size of the largest model, VoiceCraft with Encodec. *Flamed-TTS* demonstrates substantial efficiency in inference speed, achieving nearly 10$\times$ smaller RTF compared to F5-TTS—a model that shares the same number of sampling steps (32) and training paradigm (flow matching) but retains attention mechanisms.
+
+Furthermore, in comparison to OZSpeech, which is specifically designed for single-step sampling, *Flamed-TTS* exhibits comparable latency.
+
+Even with 16 sampling steps, its RTF remains close to that of OZSpeech, highlighting the efficiency of its attention-free denoising architecture.
+
+<a id="tab:tau-effect">Performance evaluation on the *LibriSpeech test-clean* across different noise scaling factor $\tau$ using 5-second audio prompts.
+
+The NFE is set to 64 as default.</a>
+
+**Temporal Diversity Analysis**.
+
+Table~[tab:temp-results](#tab:temp-results) analyzes temporal diversity across models.
+
+Compared to baselines with deterministic duration predictors (e.g., NaturalSpeech 2, OZSpeech), *Flamed-TTS* exhibits greater diversity and naturalness.
+
+It generates slower speech rates and higher MPhD, both with higher variability.
+
+Notably, its number of pauses and MPaD are 4× and 5× higher, respectively, indicating more spontaneous, human-like speech.
+
+F5-TTS performs similarly in temporal diversity, suggesting its architecture and training paradigm remain effective in this regard.
+
+However, it lags behind *Flamed-TTS* in WER due to the lack of phoneme-speech alignment.
+
+These findings highlight that employing *Probabilistic Duration and Silence Generators* can help close the dynamic pacing gap between AR and NAR TTS models, while also enhancing phoneme-to-speech alignment for improved intelligibility.
+
+### Ablation Study
+
+**NFE Evaluation**.
+
+We evaluate the performance of *Flamed-TTS* under varying numbers of function evaluations (NFE).
+
+Results from Table [tab:nfe-effect](#tab:nfe-effect) show that SIM-O and SIM-R peak at NFE=16, while WER increases slightly (by ~1\%) at NFE=4 but remains stable around 4\% as NFE increases.
+
+In contrast, UTMOS consistently improves with higher NFE, indicating enhanced naturalness with more denoising steps.
+
+**Noise Scaling Effect**.
+
+In contrast to NFE, increasing the noise scaling factor $\tau$ does not consistently improve performance.
+
+As shown in Table~[tab:tau-effect](#tab:tau-effect), the model achieves optimal results across all metrics at $\tau = 0.3$.
+
+From $\tau = 0.0$ to $\tau = 0.3$, UTMOS, SIM-O, and SIM-R show modest improvements; however, further increases in $\tau$ beyond 0.3 result in performance degradation.
+
+<a id="tab:model-size-results">Comparison of two *Flamed-TTS* model sizes: Base (143M parameters) and Small (76M parameters), evaluated on the *LibriSpeech test-clean* dataset.
+
+Both models were trained on the 500-hour *LibriTTS* training dataset.
+
+The NFE and $\tau$ are set to 128 and 0.3, respectively, as defaults.</a>
+
+**Model Size Comparison**.
+
+Table [tab:model-size-results](#tab:model-size-results) compares the performance of *Flamed-TTS*-Base (143M parameters) and *Flamed-TTS*-Small (76M parameters).
+
+Despite a nearly 50\% reduction in model size, the Small variant achieves comparable performance to the Base model across all metrics except UTMOS.
+
+Specifically, WER and speaker similarity remain largely unchanged, while naturalness shows a noticeable decline, with UTMOS scores dropping by approximately 4.5–6\%.
