--- a/Models/FlowMatching/2025.10.03_Flamed-TTS.md
+++ b/Models/FlowMatching/2025.10.03_Flamed-TTS.md
@@ -500,3 +500,21 @@ Table [tab:model-size-results](#tab:model-size-results) compares the performance
 Despite a nearly 50\% reduction in model size, the Small variant achieves comparable performance to the Base model across all metrics except UTMOS.
 
 Specifically, WER and speaker similarity remain largely unchanged, while naturalness shows a noticeable decline, with UTMOS scores dropping by approximately 4.5–6\%.
+
+## 5·Conclusion
+
+In this paper, we present *Flamed-TTS*, a novel zero-shot TTS framework trained under the optimal transport conditional flow matching paradigm.
+
+Unlike prior models following the same training strategy, *Flamed-TTS* eliminates the attention mechanism—a primary source of inference latency—by leveraging a semantically enriched prior as the initial condition in the iterative denoising process.
+
+In this setup, the vector field estimator is treated purely as a denoiser, focusing solely on enhancing acoustic features.
+
+This design not only preserves competitive performance but also substantially reduces latency.
+
+Additionally, we introduce *Probabilistic Silence Generation*, in combination with *Probabilistic Duration Generation*, to improve temporal diversity.
+
+Together, these components enable NAR TTS models to generate more spontaneous and human-like speech.
+
+\bibliography{aaai2026}
+
+\end{document}
