--- a/Models/FlowMatching/2025.10.03_Flamed-TTS.md
+++ b/Models/FlowMatching/2025.10.03_Flamed-TTS.md
@@ -518,3 +518,46 @@ Together, these components enable NAR TTS models to generate more spontaneous an
 \bibliography{aaai2026}
 
 \end{document}
+
+## References
+
+[^Zeghidour2022SoundStream]: SoundStream: An End-to-End Neural Audio Codec. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2022.
+[^D{\'e}fossez2023High]: High Fidelity Neural Audio Compression. Transactions on Machine Learning Research 2023.
+[^Chen2025Neural]: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. IEEE Transactions on Audio, Speech and Language Processing 2025.
+[^Chen2024Vall-E]: VALL-E 2: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers. 
+[^Zhang2023Speak]: Speak Foreign Languages With Your Own Voice: Cross-Lingual Neural Codec Language Modeling. arXiv:2303.03926.
+[^Han2024Vall-E]: VALL-E R: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment. arXiv:2406.07855.
+[^Song2024Ella-V]: ELLA-V: Stable Neural Codec Language Modeling With Alignment-Guided Sequence Reordering. 
+[^Peng2024V}oice{C}raft]: {V}oice{C}raft: Zero-Shot Speech Editing and Text-to-Speech in the Wild. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2024.
+[^Wang2025Spark-Tts]: Spark-Tts: An Efficient LLM-Based Text-to-Speech Model With Single-Stream Decoupled Speech Tokens. 
+[^Ju2024N}atural{S}peech]: {N}atural{S}peech 3: Zero-Shot Speech Synthesis With Factorized Codec and Diffusion Models. Proceedings of the 41st International Conference on Machine Learning 2024.
+[^Huynh-Nguyen2025OZSpeech]: OZSpeech: One-Step Zero-Shot Speech Synthesis With Learned-Prior-Conditioned Flow Matching. 
+[^Le2023Voicebox]: Voicebox: Text-Guided Multilingual Universal Speech Generation at Scale. Thirty-Seventh Conference on Neural Information Processing Systems 2023.
+[^Eskimez2024E2]: {E2 TTS}: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot {TTS}. 
+[^Chen2024F5-Tts]: F5-Tts: A Fairytaler That Fakes Fluent and Faithful Speech With Flow Matching. 
+[^Yang2025Shallow]: Shallow Flow Matching for Coarse-to-Fine Text-to-Speech Synthesis. 
+[^Park2025RapFlow-TTS]: RapFlow-TTS: Rapid and High-Fidelity Text-to-Speech With Improved Consistency Flow Matching. 
+[^Zhu2025ZipVoice]: ZipVoice: Fast and High-Quality Zero-Shot Text-to-Speech With Flow Matching. 
+[^Ren2019FastSpeech]: FastSpeech: Fast, Robust and Controllable Text to Speech. Proceedings of the 33rd International Conference on Neural Information Processing Systems 2019.
+[^Kim2021Conditional]: Conditional Variational Autoencoder With Adversarial Learning for End-to-End Text-to-Speech. 
+[^Kong2023Vits2]: VITS2: Improving Quality and Efficiency of Single-Stage Text-to-Speech With Adversarial Learning and Architecture Design. 
+[^Mehta2024Should]: Should You Use a Probabilistic Duration Model in TTS? Probably! Especially for Spontaneous Speech. 
+[^Peebles2023Scalable]: Scalable Diffusion Models With Transformers. 
+[^Lipman2023Flow]: Flow Matching for Generative Modeling. The Eleventh International Conference on Learning Representations 2023.
+[^Kang2023ZET-Speech]: ZET-Speech: Zero-Shot Adaptive Emotion-Controllable Text-to-Speech Synthesis With Diffusion and Style-Based Models. Interspeech 2023 2023.
+[^Tran2023Sten-Tts]: STEN-TTS: Improving Zero-Shot Cross-Lingual Transfer for Multi-Lingual TTS With Style-Enhanced Normalization Diffusion Framework. Interspeech 2023 2023.
+[^Shen2024NaturalSpeech]: NaturalSpeech 2: Latent Diffusion Models Are Natural and Zero-Shot Speech and Singing Synthesizers. The Twelfth International Conference on Learning Representations 2024.
+[^Kim2023P-Flow]: P-Flow: A Fast and Data-Efficient Zero-Shot {TTS} Through Speech Prompting. Thirty-Seventh Conference on Neural Information Processing Systems 2023.
+[^Mehta2024Matcha-Tts]: Matcha-Tts: A Fast TTS Architecture With Conditional Flow Matching. ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Lemerle2024Small-E]: Small-E: Small Language Model With Linear Attention for Efficient Speech Synthesis. 
+[^Peng2023Rwkv]: RWKV: Reinventing RNNs for the Transformer Era. 
+[^Gu2024Mamba]: Mamba: Linear-Time Sequence Modeling With Selective State Spaces. 
+[^Yang2024Gated]: Gated Linear Attention Transformers With Hardware-Efficient Training. 
+[^Ji2024M}obile{S}peech]: {M}obile{S}peech: A Fast and High-Fidelity Framework for Mobile Zero-Shot Text-to-Speech. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2024.
+[^Yao2024Zipformer]: Zipformer: A Faster and Better Encoder for Automatic Speech Recognition. 
+[^Li2024Cm-Tts]: CM-TTS: Enhancing Real Time Text-to-Speech Synthesis Efficiency Through Weighted Samplers and Consistency Models. 
+[^Ye2023CoMoSpeech]: CoMoSpeech: One-Step Speech and Singing Voice Synthesis via Consistency Model. 
+[^Meng2024Autoregressive]: Autoregressive Speech Synthesis Without Vector Quantization. CoRR 2024.
+[^Liu2024Autoregressive]: Autoregressive Diffusion Transformer for Text-to-Speech Synthesis. 
+[^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech. Interspeech 2019 2019.
+[^Panayotov2015Librispeech]: Librispeech: An ASR Corpus Based on Public Domain Audio Books. 2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
