--- a/Models/Consistency/2023.05.11_CoMoSpeech.md
+++ b/Models/Consistency/2023.05.11_CoMoSpeech.md
@@ -4,29 +4,27 @@
 <summary>基本信息</summary>
 
 - 标题: "CoMoSpeech: One-Step Speech and Singing Voice Synthesis via Consistency Model"
-- 作者: 
-  - 01 Zhen Ye, 
-  - 02 Wei Xue, 
-  - 03 Xu Tan, 
-  - 04 Jie Chen, 
-  - 05 Qifeng Liu, 
+- 作者:
+  - 01 Zhen Ye,
+  - 02 Wei Xue,
+  - 03 Xu Tan,
+  - 04 Jie Chen,
+  - 05 Qifeng Liu,
   - 06 Yike Guo
-- 链接: 
+- 链接:
   - [ArXiv](https://arxiv.org/abs/2305.06908) v4
   - [Publication](https://doi.org/10.1145/3581783.3612061) ACM MM2023
   - [Github](https://github.com/zhenye234/CoMoSpeech)
   - [Demo](https://comospeech.github.io/)
-- 文件: 
-  - [ArXiv](_PDF/2305.06908v4__CoMoSpeech__One-Step_Speech_&_Singing_Voice_Synthesis_via_Consistency_Model.pdf)
-  - [Publication](_PDF/2305.06908p0__CoMoSpeech__ACM_MultiMedia2023.pdf)
+- 文件:
+  - [ArXiv](../Diffusion/_PDF/2305.06908v4__CoMoSpeech__One-Step_Speech_&_Singing_Voice_Synthesis_via_Consistency_Model.pdf)
+  - [Publication](../Diffusion/_PDF/2305.06908p0__CoMoSpeech__ACM_MultiMedia2023.pdf)
 
 </details>
 
-## Abstract: 摘要
+## 摘要
 
-<details>
-<summary>展开原文</summary>
-
+<!--
 Denoising Diffusion Probabilistic Models (DDPMs) have shown promising performance for speech synthesis.
 However, a large number of iterative steps are required to achieve high sample quality, which restricts the inference speed.
 Maintaining sample quality while increasing sampling speed has become a challenging task.
@@ -35,11 +33,9 @@ The consistency constraint is applied to distill a consistency model from a well
 Our experiments show that by generating audio recordings by a single sampling step, the ***CoMoSpeech*** achieves an inference speed more than 150 times faster than real-time on a single NVIDIA A100 GPU, which is comparable to FastSpeech2, making diffusion-sampling based speech synthesis truly practical.
 Meanwhile, objective and subjective evaluations on text-to-speech and singing voice synthesis show that the proposed teacher models yield the best audio quality, and the one-step sampling based ***CoMoSpeech*** achieves the best inference speed with better or comparable audio quality to other conventional multi-step diffusion model baselines.
 Audio samples are available at [this https URL](https://comospeech.github.io/).
+-->
 
-</details>
-<br>
-
-去噪扩散概率模型 (Denoising Diffusion Probabilistic Models, DDPMs) 在语音合成方面展示了有前景的性能.
+**去噪扩散概率模型 (Denoising Diffusion Probabilistic Models, DDPMs)** 在语音合成方面展示了有前景的性能.
 然而, 为了实现高样本质量需要大量的迭代步数, 这限制了推理速度.
 保持样本质量的同时提高采样速度已经成为一个具有挑战性的任务.
 
@@ -51,14 +47,16 @@ Audio samples are available at [this https URL](https://comospeech.github.io/).
 
 音频示例可在[此处](https://comospeech.github.io/) 获得.
 
-## 1.Introduction: 引言
+## 1·引言
 
-## 2.Related Works: 相关工作
+## 2·背景
 
-## 3.Methodology: 方法
+## 3·方法
 
-## 4.Experiments: 实验
+## 4·实验
 
-## 5.Results: 结果
+## 5·结果
 
-## 6.Conclusions: 结论
+## 6·结论
+
+## 参考文献
